# hailo8_NN_acceleration

./: .gitignore  README.md
MNIST_CNN/: Makefile  compile.py  inference  inference.cpp  inference_async.cpp  model.hef  model.py  model.tflite  prepare_dataset.py  training.py  weights.h  weights.py
MNIST_CNN/weights/: fingerprint.pb  saved_model.pb
image_processing/: Makefile  draw  drawing.cpp  openCV_hello_world.cpp
model_performance/: Makefile  cpp_hailo8_performance.txt  inference.cpp  json_to_csv.py  perf_tf_model_cpu.py  perf_tflite_model_cpu.py  results_hailo.csv  results_i5-4670K.csv  results_i5-4670K.json
resNet/: model_analysis.txt  model_details.py  onnx_to_tf.py  resnet18_tflite.py  resnet50.py  resnet_cpu.py  results_i5-4670K.json  tensor_analysis.txt  tflite_resnet50.c  tflite_resnet50.cpp
videology/: coco_labels.json  index.html  model_performance.py  object-detection.py  online_detection.py  qunatize_model.py  rtps_server.py  simple_server.py
videology/mobile_net/: detection.py  online_detection.py
videology/mobile_net_v2/: detection.py  human_tracking.py
yolov8/: CMakeLists.txt  Makefile  QAT_results.csv  QAT_results.txt  compile_hailo.sh  compile_tflite.py  create_tf_records.py  evaluate.py  evaluation.py  evaluation_hailo8.cpp  evaluation_results.txt  ffmpeg_commands.sh  hailo_yolov8n.yaml  hailo_yolov8s.yaml  inference.py  inference_hailo8.cpp  inference_tflite.cpp  inference_tflite.py  orig_training.py  print_model_layers.py  resize_dataset.py  results.txt  tracking.py  training.py  video_crop.py  yolov8m.yaml
(+6 files in other folders)
